--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   flutter_native_splash: ^2.3.1
+  liquid_swipe: ^3.1.0
 
 dev_dependencies:
   flutter_test:
