login page has been added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   flutter_native_splash: ^2.3.1
@@ -36,20 +33,14 @@ flutter_native_splash:
     image: assets/logos/splash-logo.png
     icon_background_color: "#2A2A2A"
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/icons/
     - assets/logos/
     - assets/Onboarding-1.png
     - assets/Onboarding-2.png
